fix(style): update grid gap

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,9 @@
 
 .infinite-scroll-component {
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+  grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+  gap: 20px;
+  padding: 20px;
 }
 
 body {
